@@ -1,9 +1,11 @@
 package com.pilates.workflow.details;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import com.pilates.workflow.model.Aluno;
 
@@ -17,13 +19,12 @@ public class AlunoDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // Aqui você pode retornar roles se precisar (ex: ROLE_ALUNO)
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_ALUNO"));
     }
 
     @Override
     public String getPassword() {
-        return aluno.getSenha(); // senha criptografada
+        return aluno.getSenha();
     }
 
     @Override
